# memos_remind

./: .gitignore  Cargo.toml  README.md  app.toml.example
abi/src/: note.rs
examples/: client.rs
macros/: Cargo.toml  app.toml.example
macros/examples/: demo.rs
macros/src/: config.rs  lib.rs
remind/: Cargo.toml
remind/src/: lib.rs  main.rs
remind/src/config/: mod.rs
remind/src/mk2html/: mod.rs
remind/src/scan/: mod.rs
utils/: Cargo.toml
utils/examples/: client.rs
utils/src/: lib.rs  mail.rs
