[package]
name = "remind"
version = "0.1.0"
edition = "2021"

[dependencies]
abi = { version = "0.1.0", path = "../abi" }
anyhow = "1.0.86"
clap = { version = "4.5.4", features = ["derive"] }
lettre = "0.11.7"
macros = { version = "0.1.0", path = "../macros" }
serde = { version = "1.0.203", features = ["derive"] }
serde_derive = "1.0.203"
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.13"
tracing = "0.1.40"
utils = { version = "0.1.0", path = "../utils" }
validator = { version = "0.18.1", features = ["derive"] }
walkdir = "2.5.0"

[dev-dependencies]
lettre = "0.11.7"
