[package]
name = "utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
lettre = "0.11.7"
rand = "0.8.5"
time = { version = "0.3.36", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "local-time",
] }

[build-dependencies]
anyhow = "1.0.86"
vergen = { version = "8.3.1", features = ["build", "git", "gitcl", "rustc"] }
